2001-07-11  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* w3m-form.el (w3m-form-parse-region): Don't extract value from
	submit button, again.
	(w3m-form-submit): Don't set value when NAME is omitted.

2001-07-11  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-rendering-region): Do not break matching data.

2001-07-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el (w3m-fontify-forms): Put text properties
	corresponding to form types.
	(w3m-form-input): Simplify.
	(w3m-form-input-password): New function.
	(w3m-form-input-checkbox): Ditto.
	(w3m-form-input-radio): Ditto.
	(w3m-form-input-textarea): Follow changes in `w3m-form-input'.
	(w3m-form-input-select): Ditto.

2001-07-11  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m-form.el (w3m-form-goto-next-field): New function.
	(w3m-form-make-form-urlencoded): Refine to support value of
	check-box type which is list of value string.
	(w3m-form-parse-region): Support CHECKBOX type and RADIO
	type. Note that CHECKBOX type has multiple values.
	(w3m-fontify-forms): Use new property 'w3m-form-field-id to
	identify each field to support RADIO type item. Also removed
	value putting code because values are already set in parsing.
	(w3m-form-input): Support action for CHECKBOX and RADIO type
	field.

	* w3m.el (w3m-url-encode-string): Encode SPACE(0x20) as "+".
	(w3m-rendering-region): Decode entities in title string.

2001-07-10  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-w3m-attributes): Fixed problem when charset is quoted.

	* w3m-form.el (w3m-form-parse-region): Don't extract value from
	submit button.
	(w3m-form-submit): If ACTION is not specified, send data to current
	url.
	(w3m-form-make-get-string): Removed.
	
2001-07-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Bind `:bool' for old Emacsen.

2001-07-10  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-parse-attributes): Support :bool type attribute.

	* w3m-form.el (w3m-form-parse-region): Use :bool type for SELECTED